--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,72 @@
-.App {
-  text-align: center;
+
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #1E2227;
+  font-family: 'Times New Roman', Times, serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.home {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.title {
+  font-weight: lighter;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.photo {
+  display: flex;
+  width: 95%;
+  border: 2px whitesmoke solid;
+  object-fit: contain;
+  margin: auto;
+}
+
+.apod-container {
+  display: flex;
+  justify-content: center;
+  align-content: space-around;
+}
+
+.nasa-photo {
+  text-align: center;
+  justify-content: center;
+}
+
+.nasa-item {
+  padding-bottom: 25px;
+  width: 50%;
+}
+
+.nasa-data {
+  /* background-color: aquamarine; */
+  padding: 3.2em 2em 0em 2em;
+}
+
+.date, .author {
+ font-size: large;
+}
+
+.explanation {
+  line-height: 2;
+  text-align: justify;
+  font-size: large;
+  word-wrap: break-word;
+}
+
+@media (max-width: 1200px) {
+  .apod-container {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
   }
-  to {
-    transform: rotate(360deg);
+  .nasa-data {
+    width: 80%;
+  }
+  .nasa-photo {
+    width: 100%;
   }
 }
