--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,20 @@
 html, body {
   margin: 0;
   padding: 0;
+  top: 0;
+  bottom: 0;
   width: 100%;
   height: 100%;
-  background-color: #1E2227;
+  background-image: url('../src/images/mason-field-efLEMOPlPW8-unsplash.jpg');
+  background-size: 100% 100%;
+  position: absolute;
+  overflow-y: scroll;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
   font-family: 'Times New Roman', Times, serif;
+}
+::-webkit-scrollbar {
+  display: none;
 }
 
 .home {
@@ -19,7 +29,6 @@ html, body {
 .photo {
   display: flex;
   width: 95%;
-  border: 2px whitesmoke solid;
   object-fit: contain;
   margin: auto;
 }
@@ -70,3 +79,48 @@ html, body {
     width: 100%;
   }
 }
+/* 
+.star {
+  display:block;
+  width:2px;
+  height:2px;
+  border-radius:50%;
+  background:#FFF;
+  top:0;
+  left:90%;
+  position:relative;
+  transform-origin:40% 0;
+  animation-direction: normal;
+  opacity:0;
+  animation: animationFrames ease-out 2s;
+  animation-iteration-count: 3;
+}
+
+.star:after {
+  content:'';
+  position:absolute;
+  overflow: hidden;
+  top:0px;
+  left:4px;
+  border:2px solid #F00;
+  border-width:1px 100px 1px 100px; 
+  border-color:transparent transparent transparent #FFF;
+  transform:rotate(-145deg) translate3d(1px, -1px, 0);
+  transform-origin:0% 90%;
+} 
+.star4 {
+  top: 15%;
+  left: 50px;
+  animation-delay:1.8s;
+}
+ 
+@keyframes animationFrames{
+  0% {
+    opacity:1;
+    transform:  translate(-293px,-195px)  ;
+  }
+  100% {
+    opacity:0;
+    transform:  translate(245px,143px)  ;
+  }
+} */
